tests/struct_composition_bad_multiple_embedded.stderr
tests/struct_composition_bad_multiple_embedded.sl:12:2: error: SL2012: only one embedded field is allowed
