tests/struct_composition_bad_multiple_embedded.sl
struct A {
	x int
}

struct B {
	y int
}

struct C {
	A
	B
}
